[project]
name = "qa-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipython>=8.39.0",
    "llama-index>=0.14.21",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-llms-gemini>=0.6.2",
    "notebook>=7.5.6",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
